Sat Jun 14 12:35:47 2003  Joern Thyssen  <jth@gnubg.org>

  	New commands to allow modification of cube efficiency
	(note that the values are *NOT* saved with "save settings").

	* gnubg.c: new commands.
	* eval.c (EvalEfficiency): use new values.

Fri Jun 13 08:47:50 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* fix bearoff-database targets in Makefile.[ia] to invoke
	  makebearoff with an output file name, delete attempt to
	  make target gnubg.bd
	
Thu Jun 12 20:58:18 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (FindnSaveBestMoves): evaluate top move and actual move
	on the highest ply if their difference in equity exceeds the
	given threshold.
	(change all callers)
	* eval.c (FindnSaveBestMoves): fix bug leading to duplicate
	moves in the movelist.
	(reported/suggested by Michael Depreli)

Mon Jun  9 23:20:00 2003  Joern Thyssen  <jth@gnubg.org>

	Allow modifications of the match length during edit.

	* gtkboard.c (board_init): add spin button for match length.
	* gtkboard.c (score_updated): new function.
	* gtkboard.c (board_edit): issue "set matchid ..." when match 
	length changes.

Sun Jun  8 21:39:30 2003  Joern Thyssen  <jth@gnubg.org>

	Change how cubeful equities are calculated for money play to match
	match play. 
 	(reported by Robert Eberlein and Michael Depreli)

        * eval.c (MoneyLive): new function.
        * eval.c (Cl2CfMoney): rewrite code so it's similar to the
        match play code.

Sun Jun  8 22:09:03 2003  Joern Thyssen  <jth@gnubg.org>

       	New Cube temperature map
        (suggested by Albert Silver)

        * show.c (CommandShowTemperatureMap): new subcommand "=cube" to
        show temp. map for cube decision.
        * gtkgame.c: new menu entry for "show temperaturemap =cube".
        * gtktempmap.c (TempMapEquities): scale cubeful equity.
        * gtkcube.c (CreateCubeAnalysisTools): new button for temperature map.

Sun Jun  8 21:41:09 2003  Joern Thyssen  <jth@gnubg.org>
